<resources>
    <string name="app_name">PaygenManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="error_title">Erro</string>
    <string name="title_success">Sucesso</string>
    <string name="title_consumption">Consumo</string>
    <string name="title_add_items">Adicionar itens</string>
    <string name="error_empty_query">Informe ao menos um uma palavra</string>
    <string name="title_activity_login">Bem vindo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_login">Entrar</string>
    <string name="hint_password">Senha</string>
    <string name="hint_email">Email</string>
    <string name="warning_empty_fields">Preencha todos os campos</string>
    <string name="title_register">Cadastro</string>
    <string name="label_provider_name">Nome do estabelecimento</string>
    <string name="label_address">Endereço</string>
    <string name="label_open_hours">Horário de funcionamento</string>
    <string name="label_abre">Abre</string>
    <string name="label_fecha">Fecha</string>
    <string name="label_monday">SEG</string>
    <string name="label_tuersday">TER</string>
    <string name="label_wednesday">QUA</string>
    <string name="label_tuesday">QUI</string>
    <string name="time_place_holder">00:00</string>
    <string name="label_friday">SEX</string>
    <string name="label_saturday">SAB</string>
    <string name="label_sunday">DOM</string>
    <string name="label_about_desc">Sobre*</string>
    <string name="disclaimer_about">* Conte um pouco sobre o seu estabelecimento,descreva as principais caracteristicas.</string>
    <string name="restaurant">Restaurante</string>
    <string name="hamburguer">Hamburgueria</string>
    <string name="pizza">Pizzaria</string>
    <string name="disclaimer_type">Selecione a categoria do estabelecimento:</string>
    <string name="label_register">Cadastrar</string>
    <string name="label_email">Email</string>
    <string name="warning_empty_provider_name">Informe o nome do estabelecimento</string>
    <string name="warning_empty_email">Informe um email válido</string>
    <string name="warning_empty_hours">Selecione ao menos uma data e horário</string>
    <string name="warning_empty_about">Informe um texto sobre sua empresa</string>
    <string name="warning_empty_address">Informe um endereço</string>
    <string name="disclaimer_email_provider">Olá, informe o email de cadastro deste estabelecimento</string>
    <string name="label_search">Buscar</string>
    <string name="label_admin">Admin</string>
    <string name="label_employees">Funcionários</string>
    <string name="label_employee_name">Nome do funcionário</string>
    <string name="label_pin">PIN*</string>
    <string name="hint_new_password">Nova senha</string>
    <string name="disclaimer_pin">* Informe um pin númerico que será utilizado para obter acesso ao app.</string>
    <string name="disclaimer_permissions">Selecione o nível de acesso para este usuário</string>
    <string name="role_manager">Gerente</string>
    <string name="disclaimer_status_pending">Seu cadastro está pendente de ativação, para prosseguir atualize sua senha</string>
    <string name="disclaimer_change_password">Informe uma nova senha de acesso</string>
    <string name="role_cashier">Caixa</string>
    <string name="role_atendant">Atendente</string>
    <string name="role_waiter">Garçom</string>
    <string name="label_save">Salvar</string>
    <string name="pin_size">Senha deve possuir ao menos 6 caracteres</string>
    <string name="title_products">Produtos</string>
    <string name="title_employees">Funcionários</string>
    <string name="label_stock">Estoque:</string>
    <string name="label_product_desc">Descrição do produto</string>
    <string name="label_price">Preço</string>
    <string name="label_value">Valor</string>
    <string name="label_discount">Desconto</string>
    <string name="label_amount_in_stock">Quantidade em estoque</string>
    <string name="disclaimer_customers_checked">Clientes atualmente no seu estabelecimento</string>
    <string name="disclaimer_camera_usage">Para prosseguir precisamos de permissão para acessar sua camera</string>
    <string name="choose_image">Escolha uma imagem</string>
    <string name="warning_no_images_changed">Nenhuma imagem foi alterada</string>
    <string name="disclaimer_banner">Agora scolha uma imagem de um banner que será exibida no aplicativo para seus clientes</string>
    <string name="disclaimer_logo">Escolha uma imagem do seu logotipo que será exibida no aplicativo para seus clientes</string>
    <string name="title_sales">Minhas vendas</string>
    <string name="title_visual_id">Identidade visual</string>
    <string name="title_welcome">Bem vindo</string>
    <string name="title_sale_details">Detalhes da venda</string>
    <string name="label_product_name">Nome do produto</string>
    <string name="status_pending">Ativação pendente</string>
    <string name="label_one_day">Último dia</string>
    <string name="label_thirty_days">Últimos 30 dias</string>
    <string name="label_seven_days">Útimos 7 dias</string>
    <string name="label_custom_date">Data customizada</string>
    <string name="title_change_password">Mudar senha</string>
    <string name="message_welcome">Bem vindo a Paygen</string>
    <string name="title_date_filter">Defina um intervalo de data</string>
    <string name="hint_end_date">Data fim</string>
    <string name="hint_start_date">Data ínicio</string>
    <string name="bt_ok">OK</string>
    <string name="warning_invalid_date">Datas inválidas</string>
    <string name="warning_start_end_date">Data ínicio não pode ser menor que a data fim</string>
    <string name="all">Todos</string>
</resources>
