<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.ImageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/disclaimer_logo" />

            <ImageView
                android:id="@+id/imLogo"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:foreground="?attr/selectableItemBackground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/disclaimer_banner" />

            <ImageView
                android:id="@+id/imBanner"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:foreground="?attr/selectableItemBackground" />

            <Button
                android:id="@+id/btSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_400"
                android:layout_marginTop="18dp"
                android:text="@string/label_save"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>